chore: missing api.version

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,42 +1,49 @@
-{"properties": [
-  {
-    "name": "jwt.secret",
-    "type": "java.lang.String",
-    "description": "A description for 'jwt.secret'"
-  },
-  {
-    "name": "jwt.expiration",
-    "type": "java.lang.String",
-    "description": "A description for 'jwt.expiration'"
-  },
-  {
-    "name": "minio.url",
-    "type": "java.lang.String",
-    "description": "A description for 'minio.url'"
-  },
-  {
-    "name": "minio.accessKey",
-    "type": "java.lang.String",
-    "description": "A description for 'minio.accessKey'"
-  },
-  {
-    "name": "minio.secretKey",
-    "type": "java.lang.String",
-    "description": "A description for 'minio.secretKey'"
-  },
-  {
-    "name": "minio.bucketName",
-    "type": "java.lang.String",
-    "description": "A description for 'minio.bucketName'"
-  },
-  {
-    "name": "minio.publicUrl",
-    "type": "java.lang.String",
-    "description": "A description for 'minio.publicUrl'"
-  },
-  {
-    "name": "minio.profileImageFolderName",
-    "type": "java.lang.String",
-    "description": "A description for 'minio.profileImageFolderName'"
-  }
-]}
+{
+    "properties": [
+        {
+            "name": "jwt.secret",
+            "type": "java.lang.String",
+            "description": "A description for 'jwt.secret'"
+        },
+        {
+            "name": "jwt.expiration",
+            "type": "java.lang.String",
+            "description": "A description for 'jwt.expiration'"
+        },
+        {
+            "name": "minio.url",
+            "type": "java.lang.String",
+            "description": "A description for 'minio.url'"
+        },
+        {
+            "name": "minio.accessKey",
+            "type": "java.lang.String",
+            "description": "A description for 'minio.accessKey'"
+        },
+        {
+            "name": "minio.secretKey",
+            "type": "java.lang.String",
+            "description": "A description for 'minio.secretKey'"
+        },
+        {
+            "name": "minio.bucketName",
+            "type": "java.lang.String",
+            "description": "A description for 'minio.bucketName'"
+        },
+        {
+            "name": "minio.publicUrl",
+            "type": "java.lang.String",
+            "description": "A description for 'minio.publicUrl'"
+        },
+        {
+            "name": "minio.profileImageFolderName",
+            "type": "java.lang.String",
+            "description": "A description for 'minio.profileImageFolderName'"
+        },
+        {
+            "name": "api.version",
+            "type": "java.lang.String",
+            "description": "A description for 'api.version'"
+        }
+    ]
+}
