--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ minio.accessKey=${MINIO_ACCESSKEY}
 minio.secretKey=${MINIO_SECRETKEY}
 minio.bucketName=${MINIO_BUCKETNAME}
 minio.profileImageFolderName=${MINIO_PROFILEIMAGEFOLDERNAME}
+
+api.version=0.0.1
