--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -44,6 +44,11 @@
             "name": "api.version",
             "type": "java.lang.String",
             "description": "A description for 'api.version'"
+        },
+        {
+            "name": "api.server.url",
+            "type": "java.lang.String",
+            "description": "A description for 'api.server.url'"
         }
     ]
 }
