--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,4 @@ minio.bucketName=${MINIO_BUCKETNAME}
 minio.profileImageFolderName=${MINIO_PROFILEIMAGEFOLDERNAME}
 
 api.version=0.0.1
+api.server.url=https://sims-ppob-production-b742.up.railway.app
