fix: schema example

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 
+springdoc.default-produces-media-type=application/json
+
 jwt.secret=${JWT_SECRET}
 jwt.expiration=43200000
 
@@ -23,4 +25,4 @@ minio.bucketName=${MINIO_BUCKETNAME}
 minio.profileImageFolderName=${MINIO_PROFILEIMAGEFOLDERNAME}
 
 api.version=0.0.1
-api.server.url=https://sims-ppob-production-b742.up.railway.app
+api.server.url=${API_URL}
